--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         .attr("fill", "#10b981")
         .attr("font-weight", "600")
         .attr("font-size", 14)
-        .text("SWEET SPOT");
+        .text("OPTIMAL ZONE");
 
       // Usage bars (relative volume)
       g.selectAll(".usage-bar")
